--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.0",
     "@angular/common": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/core": "~8.1.2",
@@ -25,14 +26,17 @@
     "@ionic-native/native-page-transitions": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/toast": "^5.23.0",
     "@ionic/angular": "^4.7.1",
     "@ionic/app-scripts": "^3.2.4",
     "@ionic/storage": "^2.2.0",
     "@swimlane/ngx-datatable": "^16.0.2",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
+    "cordova-plugin-x-toast": "^2.7.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
     "firebase": "^7.2.0",
+    "ngx-toastr": "^12.0.0",
     "node-sass": "^4.12.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
@@ -73,7 +77,8 @@
   "cordova": {
     "plugins": {
       "cordova-sqlite-storage": {},
-      "com.telerik.plugins.nativepagetransitions": {}
+      "com.telerik.plugins.nativepagetransitions": {},
+      "cordova-plugin-x-toast": {}
     }
   }
 }
