--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@swimlane/ngx-datatable": "^16.0.2",
     "bootstrap": "^4.4.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
+    "cordova-android": "8.1.0",
     "cordova-plugin-x-toast": "^2.7.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
@@ -56,6 +57,12 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.2.0",
+    "cordova-plugin-ionic-webview": "^4.1.3",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -77,7 +84,18 @@
     "plugins": {
       "cordova-sqlite-storage": {},
       "com.telerik.plugins.nativepagetransitions": {},
-      "cordova-plugin-x-toast": {}
-    }
+      "cordova-plugin-x-toast": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {
+        "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
+      },
+      "cordova-plugin-ionic-keyboard": {}
+    },
+    "platforms": [
+      "android"
+    ]
   }
 }
