--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ionic-native/camera": "^5.23.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/crop": "^5.23.0",
+    "@ionic-native/file": "^5.23.0",
     "@ionic-native/native-page-transitions": "^5.15.1",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -33,6 +36,9 @@
     "bootstrap": "^4.4.1",
     "com.telerik.plugins.nativepagetransitions": "^0.6.5",
     "cordova-android": "8.1.0",
+    "cordova-plugin-camera": "^4.1.0",
+    "cordova-plugin-crop": "^0.4.0",
+    "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-x-toast": "^2.7.2",
     "cordova-sqlite-storage": "^3.4.0",
     "core-js": "^2.5.4",
@@ -92,7 +98,12 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-file": {},
+      "cordova-plugin-camera": {
+        "ANDROID_SUPPORT_V4_VERSION": "27.+"
+      },
+      "cordova-plugin-crop": {}
     },
     "platforms": [
       "android"
